--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "esnext"
     ],
     "moduleResolution": "node",
+    "noImplicitAny": false,
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
