--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "firebase": "9.6.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.67.4",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-paper": "^4.11.2",
@@ -32,7 +32,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-dom": "~17.0.9",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "^0.67.3",
     "typescript": "~4.3.5"
   },
   "private": true
