--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "expo-status-bar": "~1.2.0",
     "firebase": "9.6.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "^0.67.4",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-modal-datetime-picker": "^13.0.1",
-    "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-dom": "^18.0.0",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-paper": "^4.12.0",
+    "react-native-reanimated": "^2.5.0",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
+    "react-native-web": "^0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
